update license and description

--- a/crates/engine/Cargo.toml
+++ b/crates/engine/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "wfrs-engine"
+description = "Workflow RS - Engine to drive workflows via bpmn diagrams"
 version.workspace = true
-edition = "2021"
+license.workspace = true
+edition.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
