--- a/.eslintignore
+++ b/.eslintignore
@@ -4,5 +4,6 @@ dist
 pnpm-lock.yaml
 pnpm-workspace.yaml
 wasm/**/pkg/*
+wasm/parser/helper/src/main.js
 packages/core/vite.config.ts
 .eslintrc.cjs
