--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "wfrs-validator"
 description = "Workflow RS - Validation on expressions i.e. jsep"
-version.workspace = true
+version = "0.0.3"
 license.workspace = true
 edition.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wfrs-model = { path = "../model" }
-log = "0.4.6"
+wfrs-model = { path = "../model", version = "0.0.3" }
+log = "0.4.20"
