--- a/wasm/parser/package_json/package.json
+++ b/wasm/parser/package_json/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@wfrs/parser",
-  "version": "0.0.5",
+  "version": "0.0.6",
+  "description": "Parse BPMN diagrams into workflow-rs binary format .wfrs",
   "license": "MIT",
   "files": [
     "parser_bg.wasm",
