--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -1,12 +1,25 @@
 {
-  "name": "@wfrs/vite-plugin",
-  "version": "0.0.10",
-  "description": "Workflow RS - Vite plugin to parse and hot reload bpmn diagrams",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "MIT"
+    "name": "@wfrs/vite-plugin",
+    "version": "0.0.10",
+    "description": "Workflow RS - Vite plugin to parse and hot reload bpmn diagrams",
+    "main": "./dist/index.js",
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.ts",
+    "scripts": {
+        "build": "tsup"
+    },
+    "dependencies": {
+        "magic-string": "^0.30.4",
+        "@wfrs/parser": "workspace:*"
+    },
+    "devDependencies": {
+        "@types/node": "^20.8.2",
+        "typescript": "^5.2.2",
+        "tsup": "^7.2.0",
+        "vite": "^4.4.5",
+        "rollup": "^3.29.4"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT"
 }
