--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,12 @@
 {
     "name": "@wfrs/core",
-    "version": "0.0.11",
+    "version": "0.0.12",
     "type": "module",
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
     "scripts": {
         "build": "tsup",
         "lint": "eslint",
