--- a/packages/pinia/package.json
+++ b/packages/pinia/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@wfrs/pinia",
     "private": false,
-    "version": "0.0.11",
+    "version": "0.0.12",
     "type": "module",
     "files": [
         "dist"
@@ -19,7 +19,7 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "@wfrs/runtime": "workspace:*",
         "@wfrs/core": "workspace:*"
