--- a/packages/vite-plugin-helper/package.json
+++ b/packages/vite-plugin-helper/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wfrs/vite-plugin-helper",
-    "version": "0.0.11",
+    "version": "0.0.12",
     "description": "",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
@@ -8,9 +8,12 @@
     "scripts": {
         "build": "tsup"
     },
+    "files": [
+        "dist"
+    ],
     "keywords": [],
     "author": "",
-    "license": "ISC",
+    "license": "MIT",
     "devDependencies": {
         "@types/node": "^20.8.2",
         "typescript": "^5.2.2",
