--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wfrs/vite-plugin",
-    "version": "0.0.11",
+    "version": "0.0.12",
     "description": "Workflow RS - Vite plugin to parse and hot reload bpmn diagrams",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
@@ -8,6 +8,9 @@
     "scripts": {
         "build": "tsup"
     },
+    "files": [
+        "dist"
+    ],
     "dependencies": {
         "magic-string": "^0.30.4",
         "@wfrs/parser": "workspace:*"
