--- a/wasm/parser/package.json
+++ b/wasm/parser/package.json
@@ -1,15 +1,13 @@
 {
     "name": "@wfrs/parser",
-    "version": "0.0.11",
+    "version": "0.0.12",
     "description": "Parse BPMN diagrams into workflow-rs binary format .wfrs",
     "license": "MIT",
     "scripts": {
         "build": "wasm-pack build --target nodejs --release --scope wfrs --no-pack"
     },
     "files": [
-        "pkg/parser_bg.wasm",
-        "pkg/parser.js",
-        "pkg/parser.d.ts"
+        "pkg"
     ],
     "dependencies": {
         "@wfrs/vite-plugin-helper": "workspace:*"
