--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,19 +10,29 @@
     "scripts": {
         "build": "tsup",
         "lint": "eslint",
-        "codegen": "protoc --ts_out ./src/proto --ts_opt long_type_string --ts_opt optimize_code_size   --proto_path ../../workflow-rs-proto ../../workflow-rs-proto/wfrs.proto"
+        "codegen": "protoc --ts_out ./src/proto --ts_opt long_type_string --ts_opt optimize_code_size   --proto_path ../../workflow-rs-proto ../../workflow-rs-proto/wfrs.proto",
+        "test": "jest"
     },
     "dependencies": {
+        "@protobuf-ts/grpcweb-transport": "^2.9.1",
         "@protobuf-ts/runtime": "^2.9.1",
         "@protobuf-ts/runtime-rpc": "^2.9.1",
-        "@protobuf-ts/grpcweb-transport": "^2.9.1",
-        "rxjs": "^7.8.1",
-        "@wfrs/runtime": "workspace:*"
+        "@wfrs/runtime": "workspace:*",
+        "rxjs": "^7.8.1"
     },
     "devDependencies": {
+        "@babel/plugin-transform-runtime": "^7.23.2",
+        "@babel/preset-env": "^7.23.2",
+        "@babel/preset-typescript": "^7.23.2",
+        "@jest/globals": "^29.7.0",
         "@protobuf-ts/plugin": "^2.9.1",
+        "@types/jest": "^29.5.7",
         "@types/node": "^20.8.2",
-        "typescript": "^5.2.2",
-        "tsup": "^7.2.0"
+        "babel-jest": "^29.7.0",
+        "babel-plugin-transform-import-meta": "^2.2.1",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.1",
+        "tsup": "^7.2.0",
+        "typescript": "^5.2.2"
     }
 }
