--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -6,21 +6,32 @@
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "scripts": {
-        "build": "tsup"
+        "build": "tsup",
+        "test": "jest"
     },
     "files": [
         "dist"
     ],
     "dependencies": {
-        "magic-string": "^0.30.4",
-        "@wfrs/parser": "workspace:*"
+        "@wfrs/parser": "workspace:*",
+        "magic-string": "^0.30.4"
     },
     "devDependencies": {
+        "@babel/plugin-transform-runtime": "^7.23.2",
+        "@babel/preset-env": "^7.23.2",
+        "@babel/preset-typescript": "^7.23.2",
+        "@jest/globals": "^29.7.0",
+        "@protobuf-ts/plugin": "^2.9.1",
+        "@types/jest": "^29.5.7",
         "@types/node": "^20.8.2",
-        "typescript": "^5.2.2",
+        "babel-jest": "^29.7.0",
+        "babel-plugin-transform-import-meta": "^2.2.1",
+        "jest": "^29.7.0",
+        "rollup": "^3.29.4",
+        "ts-jest": "^29.1.1",
         "tsup": "^7.2.0",
-        "vite": "^4.4.5",
-        "rollup": "^3.29.4"
+        "typescript": "^5.2.2",
+        "vite": "^4.4.5"
     },
     "keywords": [],
     "author": "",
