fix: unit test cfg

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,12 @@
     "files": [
         "dist"
     ],
+    "exports": {
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js"
+        }
+    },
     "scripts": {
         "build": "tsup",
         "lint": "eslint",
