--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
         "husky": "^8.0.3",
         "lint-staged": "^15.0.2",
         "prettier": "^3.0.3",
-        "typescript": "*"
+        "typescript": "*",
+        "vitest": "*"
     },
     "lint-staged": {
         "**/*.{js,ts,tsx}": [
