--- a/packages/pinia/package.json
+++ b/packages/pinia/package.json
@@ -15,7 +15,8 @@
         }
     },
     "scripts": {
-        "build": "vite build"
+        "build": "vite build",
+        "test": "vitest --run"
     },
     "keywords": [],
     "author": "",
@@ -32,17 +33,18 @@
     },
     "devDependencies": {
         "@protobuf-ts/grpcweb-transport": "^2.9.1",
-        "@wfrs/runtime": "^1.0.4",
-        "rxjs": "^7.8.1",
-        "strip-literal": "^1.3.0",
         "@protobuf-ts/plugin": "^2.9.1",
         "@vitejs/plugin-vue": "^4.4.0",
+        "@vue/test-utils": "^2.4.1",
+        "jsdom": "^22.1.0",
+        "pinia": "^2.1.6",
+        "rollup-plugin-typescript2": "^0.36.0",
+        "rxjs": "^7.8.1",
         "vite": "^4.5.0",
         "vite-plugin-dts": "^3.6.0",
         "vite-plugin-top-level-await": "^1.3.1",
         "vite-plugin-wasm": "^3.2.2",
-        "rollup-plugin-typescript2": "^0.36.0",
-        "pinia": "^2.1.6",
+        "vitest": "^0.34.6",
         "vue": "^3.3.4",
         "vue-i18n": "^9.5.0",
         "vue-router": "^4.2.5"
