--- a/packages/pinia/package.json
+++ b/packages/pinia/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@wfrs/pinia",
     "private": false,
-    "version": "0.0.18",
+    "version": "0.20.0",
     "type": "module",
     "files": [
         "dist"
@@ -22,13 +22,11 @@
     "license": "MIT",
     "dependencies": {
         "@wfrs/runtime": "workspace:*",
-        "@wfrs/core": "workspace:*"
-    },
-    "peerDependencies": {
-        "pinia": "2.x",
-        "vue": "3.x",
-        "vue-i18n": "9.x",
-        "vue-router": "4.x"
+        "@wfrs/core": "workspace:*",
+        "pinia": "2.1.7",
+        "vue": "3.4.20",
+        "vue-i18n": "9.9.1",
+        "vue-router": "4.3.0"
     },
     "devDependencies": {
         "@protobuf-ts/grpcweb-transport": "^2.9.1",
@@ -36,11 +34,11 @@
         "rxjs": "^7.8.1",
         "strip-literal": "^1.3.0",
         "@protobuf-ts/plugin": "^2.9.1",
-        "@vitejs/plugin-vue": "^4.4.0",
-        "vite": "^4.5.0",
-        "vite-plugin-dts": "^3.6.0",
-        "vite-plugin-top-level-await": "^1.3.1",
-        "vite-plugin-wasm": "^3.2.2",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "vite": "^5.1.4",
+        "vite-plugin-dts": "^3.7.3",
+        "vite-plugin-top-level-await": "^1.4.1",
+        "vite-plugin-wasm": "^3.3.0",
         "rollup-plugin-typescript2": "^0.36.0",
         "pinia": "^2.1.6",
         "vue": "^3.3.4",
