build: prepare release v0.20.2

--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -1,10 +1,11 @@
 {
     "name": "@wfrs/vite-plugin",
-    "version": "0.20.1",
+    "version": "0.20.2",
     "description": "Workflow RS - Vite plugin to parse and hot reload bpmn diagrams",
     "main": "./dist/index.js",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
+    "type": "module",
     "scripts": {
         "build": "tsup"
     },
